# serializer version: 1
# name: test_all_entities[cover.bedroom-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.bedroom',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.SHADE: 'shade'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'gaposa',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 11>,
    'translation_key': None,
    'unique_id': 'DEVICE123_motor-2',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[cover.bedroom-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'shade',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Bedroom',
      <CoverEntityStateAttribute.IS_CLOSED: 'is_closed'>: True,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CoverEntityFeature: 11>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.bedroom',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
# name: test_all_entities[cover.living_room-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.living_room',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.SHADE: 'shade'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'gaposa',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 11>,
    'translation_key': None,
    'unique_id': 'DEVICE123_motor-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[cover.living_room-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'shade',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Living Room',
      <CoverEntityStateAttribute.IS_CLOSED: 'is_closed'>: False,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CoverEntityFeature: 11>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.living_room',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
